--- a/mia/Views/Profile/DetailContainer/HXProfileDetailHeader.xib
+++ b/mia/Views/Profile/DetailContainer/HXProfileDetailHeader.xib
@@ -69,6 +69,7 @@
                                 </label>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <gestureRecognizers/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="FjZ-9c-xp3" secondAttribute="bottom" id="G7i-qd-R6m"/>
                                 <constraint firstAttribute="bottom" secondItem="oqf-n7-hfW" secondAttribute="bottom" id="GcH-iN-STf"/>
@@ -78,6 +79,9 @@
                                 <constraint firstItem="FjZ-9c-xp3" firstAttribute="leading" secondItem="oqf-n7-hfW" secondAttribute="trailing" constant="2" id="ij1-Ou-ykN"/>
                                 <constraint firstItem="oqf-n7-hfW" firstAttribute="leading" secondItem="wPO-Ib-K6v" secondAttribute="leading" id="tcg-1x-2g3"/>
                             </constraints>
+                            <connections>
+                                <outletCollection property="gestureRecognizers" destination="Dqn-V2-DjP" appends="YES" id="vQp-9Y-5qr"/>
+                            </connections>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5OM-EU-lwS" userLabel="Center Line">
                             <rect key="frame" x="57" y="3" width="1" height="12"/>
@@ -103,6 +107,7 @@
                                 </label>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <gestureRecognizers/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="EzP-la-yoJ" secondAttribute="bottom" id="IN1-iG-8y6"/>
                                 <constraint firstAttribute="bottom" secondItem="RAj-l7-XP7" secondAttribute="bottom" id="QCw-Jz-lM8"/>
@@ -112,6 +117,9 @@
                                 <constraint firstItem="EzP-la-yoJ" firstAttribute="leading" secondItem="Ge9-AJ-rd7" secondAttribute="leading" id="tPG-VE-uvw"/>
                                 <constraint firstAttribute="trailing" secondItem="RAj-l7-XP7" secondAttribute="trailing" id="yRW-Q7-3e9"/>
                             </constraints>
+                            <connections>
+                                <outletCollection property="gestureRecognizers" destination="WHK-mE-hNb" appends="YES" id="1CW-A4-gZV"/>
+                            </connections>
                         </view>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -170,5 +178,15 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="240.5" y="315.5"/>
         </view>
+        <tapGestureRecognizer id="Dqn-V2-DjP">
+            <connections>
+                <action selector="fansViewTaped" destination="-1" id="562-eR-yVJ"/>
+            </connections>
+        </tapGestureRecognizer>
+        <tapGestureRecognizer id="WHK-mE-hNb">
+            <connections>
+                <action selector="followViewTaped" destination="-1" id="lHc-Y8-2yr"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
 </document>
