--- a/mia/Base.lproj/Profile.storyboard
+++ b/mia/Base.lproj/Profile.storyboard
@@ -36,9 +36,21 @@
                                     <constraint firstAttribute="height" constant="64" id="ZkS-4N-4gj"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YbV-Ql-mfY">
+                                <rect key="frame" x="266" y="20" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="TBD-sv-Onz"/>
+                                    <constraint firstAttribute="height" constant="44" id="f9Y-9k-0Rk"/>
+                                </constraints>
+                                <state key="normal" image="setting"/>
+                                <connections>
+                                    <action selector="settingButtonPressed" destination="J2q-U5-he9" eventType="touchUpInside" id="vhf-TL-8Ag"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="YbV-Ql-mfY" secondAttribute="trailing" constant="10" id="8M7-OA-HFJ"/>
                             <constraint firstAttribute="trailing" secondItem="SYQ-XM-I6r" secondAttribute="trailing" id="EPR-Dj-dMc"/>
                             <constraint firstAttribute="bottom" secondItem="SYQ-XM-I6r" secondAttribute="bottom" id="FJF-Te-Ppg"/>
                             <constraint firstItem="8aQ-A4-dlQ" firstAttribute="leading" secondItem="Gp0-n6-Oir" secondAttribute="leading" id="JP1-HT-6vG"/>
@@ -47,6 +59,7 @@
                             <constraint firstItem="W7x-hu-DJG" firstAttribute="top" secondItem="Gp0-n6-Oir" secondAttribute="top" id="Saz-cl-5cD"/>
                             <constraint firstAttribute="bottom" secondItem="8aQ-A4-dlQ" secondAttribute="bottom" id="aS6-tP-fhJ"/>
                             <constraint firstAttribute="trailing" secondItem="W7x-hu-DJG" secondAttribute="trailing" id="hTo-z2-kK3"/>
+                            <constraint firstItem="YbV-Ql-mfY" firstAttribute="bottom" secondItem="W7x-hu-DJG" secondAttribute="bottom" id="jSL-Jv-3bo"/>
                             <constraint firstItem="W7x-hu-DJG" firstAttribute="leading" secondItem="Gp0-n6-Oir" secondAttribute="leading" id="lNc-fn-93W"/>
                             <constraint firstItem="SYQ-XM-I6r" firstAttribute="top" secondItem="Gp0-n6-Oir" secondAttribute="top" id="mAZ-4b-fpI"/>
                             <constraint firstAttribute="trailing" secondItem="8aQ-A4-dlQ" secondAttribute="trailing" id="vgW-RT-xVc"/>
@@ -160,4 +173,7 @@
             <point key="canvasLocation" x="181" y="961"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="setting" width="19" height="19"/>
+    </resources>
 </document>
