--- a/mia/Base.lproj/MessageCenter.storyboard
+++ b/mia/Base.lproj/MessageCenter.storyboard
@@ -33,22 +33,19 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ymE-B9-KB0" customClass="HXIBButton">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FcM-ph-Mw0" customClass="HXIBImageView">
                                             <rect key="frame" x="15" y="10" width="40" height="40"/>
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="40" id="kUI-12-5Yr"/>
-                                                <constraint firstAttribute="width" secondItem="ymE-B9-KB0" secondAttribute="height" multiplier="1:1" id="ofB-OP-ZDx"/>
+                                                <constraint firstAttribute="width" secondItem="FcM-ph-Mw0" secondAttribute="height" multiplier="1:1" id="37N-D1-MBt"/>
+                                                <constraint firstAttribute="width" constant="40" id="XjV-Bf-88Q"/>
                                             </constraints>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                     <real key="value" value="20"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
-                                            <connections>
-                                                <action selector="avatarButtonPressed" destination="YV6-S6-Mo4" eventType="touchUpInside" id="PVW-Pi-9cR"/>
-                                            </connections>
-                                        </button>
+                                        </imageView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wUG-Z9-45v" customClass="HXIBView">
                                             <rect key="frame" x="65" y="17" width="7" height="7"/>
                                             <color key="backgroundColor" red="0.043137254899999998" green="0.81568627449999997" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -82,16 +79,16 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="ymE-B9-KB0" firstAttribute="top" secondItem="PO0-8I-3pB" secondAttribute="top" constant="10" id="6su-ei-tzE"/>
-                                        <constraint firstItem="wUG-Z9-45v" firstAttribute="top" secondItem="ymE-B9-KB0" secondAttribute="top" constant="7" id="DZn-cW-grx"/>
+                                        <constraint firstItem="FcM-ph-Mw0" firstAttribute="top" secondItem="PO0-8I-3pB" secondAttribute="top" constant="10" id="3zo-SO-scG"/>
                                         <constraint firstItem="slq-Du-tAy" firstAttribute="trailing" secondItem="gcd-7B-u9Q" secondAttribute="trailing" id="KQo-0b-Wcq"/>
                                         <constraint firstItem="slq-Du-tAy" firstAttribute="leading" secondItem="gcd-7B-u9Q" secondAttribute="leading" id="KdX-tG-ZgV"/>
-                                        <constraint firstItem="ymE-B9-KB0" firstAttribute="leading" secondItem="PO0-8I-3pB" secondAttribute="leading" constant="15" id="MtB-0x-sMe"/>
+                                        <constraint firstItem="FcM-ph-Mw0" firstAttribute="leading" secondItem="PO0-8I-3pB" secondAttribute="leading" constant="15" id="OXN-ON-M6M"/>
                                         <constraint firstAttribute="bottom" secondItem="F5g-dB-21Q" secondAttribute="bottom" constant="15" id="Q3u-gj-Fql"/>
                                         <constraint firstItem="F5g-dB-21Q" firstAttribute="top" secondItem="slq-Du-tAy" secondAttribute="bottom" constant="10" id="U69-B0-2sA"/>
-                                        <constraint firstItem="wUG-Z9-45v" firstAttribute="leading" secondItem="ymE-B9-KB0" secondAttribute="trailing" constant="10" id="W4j-xd-KJy"/>
                                         <constraint firstItem="F5g-dB-21Q" firstAttribute="leading" secondItem="slq-Du-tAy" secondAttribute="leading" id="Wym-kx-l6v"/>
+                                        <constraint firstItem="wUG-Z9-45v" firstAttribute="top" secondItem="FcM-ph-Mw0" secondAttribute="top" constant="7" id="Yjw-Sj-tYy"/>
                                         <constraint firstItem="gcd-7B-u9Q" firstAttribute="leading" secondItem="wUG-Z9-45v" secondAttribute="trailing" constant="5" id="doM-VM-T8J"/>
+                                        <constraint firstItem="wUG-Z9-45v" firstAttribute="leading" secondItem="FcM-ph-Mw0" secondAttribute="trailing" constant="10" id="kT8-E8-W1J"/>
                                         <constraint firstItem="F5g-dB-21Q" firstAttribute="trailing" secondItem="slq-Du-tAy" secondAttribute="trailing" id="pf7-1X-RzO"/>
                                         <constraint firstItem="slq-Du-tAy" firstAttribute="top" secondItem="gcd-7B-u9Q" secondAttribute="bottom" constant="8" id="rPP-Ra-PC0"/>
                                         <constraint firstItem="gcd-7B-u9Q" firstAttribute="top" secondItem="PO0-8I-3pB" secondAttribute="top" constant="12" id="slf-gN-Wut"/>
@@ -99,9 +96,8 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="avatarButton" destination="ymE-B9-KB0" id="oFk-Gc-p7K"/>
+                                    <outlet property="avatar" destination="FcM-ph-Mw0" id="gbA-FX-y1J"/>
                                     <outlet property="contentLabel" destination="slq-Du-tAy" id="uoh-BT-0E7"/>
-                                    <outlet property="delegate" destination="mdq-lx-A46" id="6ju-cB-68R"/>
                                     <outlet property="descriptionLabel" destination="gcd-7B-u9Q" id="uUy-fX-F71"/>
                                     <outlet property="messageIcon" destination="wUG-Z9-45v" id="Cah-dK-RRF"/>
                                     <outlet property="timeLabel" destination="F5g-dB-21Q" id="qCf-Ap-OuN"/>
