--- a/mia/Views/Common/HXNavigationBar/HXNavigationBar.xib
+++ b/mia/Views/Common/HXNavigationBar/HXNavigationBar.xib
@@ -39,10 +39,10 @@
                     <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EDM-DY-yeI">
-                            <rect key="frame" x="0.0" y="0.0" width="40" height="44"/>
+                            <rect key="frame" x="0.0" y="0.0" width="46" height="44"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="40" id="K5T-qB-4FR"/>
+                                <constraint firstAttribute="width" constant="46" id="K5T-qB-4FR"/>
                             </constraints>
                             <state key="normal" image="C-BackIcon-Gray"/>
                             <connections>
@@ -56,7 +56,7 @@
                                 <constraint firstAttribute="height" constant="21" id="Yj6-hq-jF8"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
