--- a/mia/Base.lproj/Profile.storyboard
+++ b/mia/Base.lproj/Profile.storyboard
@@ -286,16 +286,20 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wcu-By-GKq">
-                                            <rect key="frame" x="10" y="23" width="94" height="20"/>
+                                            <rect key="frame" x="10" y="20" width="100" height="25"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="94" id="XHz-N2-Eju"/>
-                                                <constraint firstAttribute="height" constant="20" id="imL-3K-XWu"/>
+                                                <constraint firstAttribute="height" constant="25" id="GHE-6B-Z1o"/>
+                                                <constraint firstAttribute="width" constant="100" id="aqv-XY-ZZc"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                            <state key="normal" title="播放全部" image="play_black">
+                                            <state key="normal" title="播放全部" image="PF-PlayIcon">
                                                 <color key="titleColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
+                                            <state key="selected" title="播放全部" image="PF-PauseIcon"/>
+                                            <connections>
+                                                <action selector="playButtonPressed:" destination="UkH-fu-roH" eventType="touchUpInside" id="RZJ-qh-1cd"/>
+                                            </connections>
                                         </button>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0vI-pV-Nw3" userLabel="Bottom Line">
                                             <rect key="frame" x="0.0" y="65" width="320" height="0.0"/>
@@ -313,6 +317,9 @@
                                             <state key="normal" title="编辑">
                                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
+                                            <connections>
+                                                <action selector="editButtonPressed" destination="UkH-fu-roH" eventType="touchUpInside" id="FDs-kM-0UJ"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <constraints>
@@ -325,8 +332,11 @@
                                         <constraint firstAttribute="bottom" secondItem="0vI-pV-Nw3" secondAttribute="bottom" id="wwQ-yE-g1x"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="delegate" destination="Qc6-9f-kPc" id="Gqh-z5-2Ei"/>
+                                </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HXProfileSongCell" rowHeight="65" id="8uk-eA-52n" userLabel="HXProfileSongCell" customClass="HXProfileSongCell">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HXProfileSongCell" rowHeight="65" id="8uk-eA-52n" userLabel="HXProfileSongCell" customClass="HXProfileSongCell">
                                 <rect key="frame" x="0.0" y="321" width="320" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8uk-eA-52n" id="64t-gY-sUr">
@@ -477,7 +487,8 @@
         <image name="P-SeeIcon" width="20" height="20"/>
         <image name="P-UnFavoriteIcon" width="20" height="20"/>
         <image name="PF-DownLoadIcon" width="20" height="20"/>
-        <image name="play_black" width="20" height="20"/>
+        <image name="PF-PauseIcon" width="25" height="25"/>
+        <image name="PF-PlayIcon" width="25" height="25"/>
         <image name="setting" width="19" height="19"/>
     </resources>
 </document>
