--- a/mia/Base.lproj/Share.storyboard
+++ b/mia/Base.lproj/Share.storyboard
@@ -216,7 +216,7 @@
                                 <rect key="frame" x="16" y="9" width="25" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <inset key="imageEdgeInsets" minX="-16" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" image="MD-BackIcon"/>
+                                <state key="normal" image="C-BackIcon-Gray"/>
                                 <connections>
                                     <action selector="backButtonPressed" destination="Dxq-Jl-kQw" eventType="touchUpInside" id="lPS-0R-EEz"/>
                                 </connections>
@@ -275,9 +275,9 @@
     <resources>
         <image name="C-AddMusicBG" width="160" height="160"/>
         <image name="C-AddMusicIcon" width="45" height="45"/>
+        <image name="C-BackIcon-Gray" width="25" height="25"/>
         <image name="C-CloseIcon-Red" width="10" height="10"/>
         <image name="C-LocationIcon" width="12" height="17"/>
         <image name="M-PlayIcon" width="35" height="35"/>
-        <image name="MD-BackIcon" width="25" height="25"/>
     </resources>
 </document>
