--- a/mia/Base.lproj/MusicDetail.storyboard
+++ b/mia/Base.lproj/MusicDetail.storyboard
@@ -223,7 +223,7 @@
                                                                 <action selector="infectButtonPressed" destination="Log-fI-kqW" eventType="touchUpInside" id="w10-8a-sZj"/>
                                                             </connections>
                                                         </button>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6S7-ki-cI2" customClass="HXInfectUserView">
+                                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6S7-ki-cI2" customClass="HXInfectUserView">
                                                             <rect key="frame" x="60" y="16" width="100" height="30"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mQ0-Gl-FT0">
