--- a/mia/Views/HomePage/InfectUserView/HXInfectUserItemView.xib
+++ b/mia/Views/HomePage/InfectUserView/HXInfectUserItemView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
@@ -15,7 +15,6 @@
             <subviews>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rS0-ee-IVB">
                     <rect key="frame" x="142" y="266" width="36" height="36"/>
-                    <animations/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.40000000000000002" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="rS0-ee-IVB" secondAttribute="height" multiplier="1:1" id="jpu-fg-LJ5"/>
@@ -23,14 +22,12 @@
                 </view>
                 <imageView clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="p7H-W7-LeR">
                     <rect key="frame" x="144" y="268" width="32" height="32"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="p7H-W7-LeR" secondAttribute="height" multiplier="1:1" id="QmG-QA-5zb"/>
                         <constraint firstAttribute="width" constant="32" id="k8o-Xw-D9c"/>
                     </constraints>
                 </imageView>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="rS0-ee-IVB" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="4Vg-Ii-EIn"/>
