更新【详情】页排版

--- a/mia/Base.lproj/MusicDetail.storyboard
+++ b/mia/Base.lproj/MusicDetail.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0iG-pd-edV">
-                                <rect key="frame" x="0.0" y="20" width="320" height="488"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="508"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableFooterView" hidden="YES" contentMode="scaleToFill" id="oar-Ka-VYp">
                                     <rect key="frame" x="0.0" y="565" width="320" height="10"/>
@@ -473,13 +473,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="0iG-pd-edV" secondAttribute="trailing" id="BAR-j4-iJf"/>
-                            <constraint firstItem="0iG-pd-edV" firstAttribute="top" secondItem="f1L-EU-SJ5" secondAttribute="bottom" id="KpE-Ci-4a3"/>
                             <constraint firstItem="nPW-L7-lOu" firstAttribute="leading" secondItem="loc-IR-PTY" secondAttribute="leading" id="Nl8-N8-RB8"/>
                             <constraint firstItem="rOj-Ru-GcS" firstAttribute="top" secondItem="0iG-pd-edV" secondAttribute="bottom" id="QG7-nx-CZL"/>
                             <constraint firstItem="Yo9-3z-viB" firstAttribute="top" secondItem="nPW-L7-lOu" secondAttribute="bottom" constant="-50" id="Rtb-WG-QYK"/>
                             <constraint firstItem="Yo9-3z-viB" firstAttribute="top" secondItem="rOj-Ru-GcS" secondAttribute="bottom" id="SoK-aS-pf3"/>
                             <constraint firstItem="0iG-pd-edV" firstAttribute="leading" secondItem="loc-IR-PTY" secondAttribute="leading" id="dBU-mX-omb"/>
                             <constraint firstAttribute="trailing" secondItem="nPW-L7-lOu" secondAttribute="trailing" id="iGt-HH-Lcs"/>
+                            <constraint firstItem="0iG-pd-edV" firstAttribute="top" secondItem="loc-IR-PTY" secondAttribute="top" id="mu2-Aw-WjI"/>
                             <constraint firstAttribute="trailing" secondItem="rOj-Ru-GcS" secondAttribute="trailing" id="oQd-Xh-7j4"/>
                             <constraint firstItem="rOj-Ru-GcS" firstAttribute="leading" secondItem="loc-IR-PTY" secondAttribute="leading" id="wy2-Uh-9vA"/>
                         </constraints>
